--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: server
-          image: trofimovichyury/multi-client:v1
+          image: trofimovichyury/multi-client
           ports:
             - containerPort: 5000
           env:
